# ThinkingInC

./: README.md  release.bat  release.ps1
Chapters/Home/: Index.htm  Index.html  Install.html  clean_tables.py  cleanup_tags.py  license.html  new_index.html  styles.css  stylesheet.css  tables.html  tables_cleaned.html
Chapters/Home/experiments/: index-washed.html  new-index.html
Chapters/Home/old/: cleanup_tags.py  convert-index.py
Chapters/chap1/: slide_10.html  slide_11.html  slide_14.html  slide_15.html  slide_17.html  slide_6.html
ThinkingInCWebApp/: README.md  nuxt.config.js  tailwind.config.js
ThinkingInCWebApp/layouts/: default.vue
ThinkingInCWebApp/pages/: index.vue
old/: check_for_unmatched.py  index-test.html  new_index.html
old/ThinkingInCWebApp/: .gitignore  package.json
old/ThinkingInCWebApp/components/: FloatingNav.vue
old/tools/: RenumberSVG.py
src/: Index.html  styles.css
src/Chapters/chap1/: slide_13.html  slide_18.html  slide_19.html  slide_4.html  slide_7.html  slide_8.html
src/lectures/: check_for_unmatched.py  make_slides.py
src/lectures/chap1/: slide_10.html  slide_18.html  slide_20.html  slide_21.html  slides.html
src/lectures/chap2/: slide_1.html  slide_12.html  slide_13.html  slide_14.html  slide_16.html  slide_17.html  slide_2.html  slide_20.html  slide_3.html  slide_5.html  (+4 more)
tools/: README.md  RenameSVG.py  release.ps1
tools/check-links/: .python-version  check.bat  pyproject.toml
tools/javascript/: README.md  generate.py
tools/make_slides/: delete_old_html_slides.py  make_slides.py  pyproject.toml
(+82 files in other folders)
