[project]
name = "check-links"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Bruce Eckel", email = "mindviewinc@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "linkchecker>=10.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true
